src/main/java/com/example/study/practical_programming/self/good/ship/Engine.java
package com.example.study.practical_programming.self.good.ship;

public class Engine {
}
