src/main/java/com/example/study/practical_programming/self/bad/ship/Engine.java
package com.example.study.practical_programming.self.bad.ship;

public class Engine {
}
